--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -1,29 +1,60 @@
 <!--#set global $pane="Config"#-->
 <!--#set global $help_uri="configure-0-7"#-->
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
-
 <div class="colmask">
-     <div class="section padTable">
-         <table id="infoTable">
-             <tbody>
-                 <tr class="alt"><td class="infoTableHeader">$T('version'): </td><td class="infoTableCell">$version [$build]</td></tr>
-                 <tr><td class="infoTableHeader">$T('uptime'): </td><td class="infoTableCell">$uptime</td></tr>
-                 <tr class="alt"><td class="infoTableHeader">$T('confgFile'): </td><td class="infoTableCell">$configfn</td></tr>
-                 <tr><td class="infoTableHeader">$T('cache').capitalize(): </td><td class="infoTableCell"><!--#set $msg=$T('ft-buffer@2')%($cache_art, $cache_size)#-->$msg</td></tr>
-                 <tr class="alt"><td class="infoTableHeader">$T('parameters'): </td><td class="infoTableCell">$cmdline</td></tr>
-                 <tr><td class="infoTableHeader">$T('pythonVersion'): </td><td class="infoTableCell">$sys.version[:120]</td></tr>
-                 <tr class="infoTableSeperator alt"><td class="infoTableHeader">$T('homePage') </td><td class="infoTableCell"><a href="http://sabnzbd.org/" target="_blank">http://sabnzbd.org/</a></td></tr>
-                 <tr><td class="infoTableHeader">$T('menu-wiki') </td><td class="infoTableCell"><a href="http://wiki.sabnzbd.org/faq" target="_blank">http://wiki.sabnzbd.org/faq</a></td></tr>
-                 <tr class="alt"><td class="infoTableHeader">$T('menu-forums') </td><td class="infoTableCell"><a href="http://forums.sabnzbd.org/" target="_blank">http://forums.sabnzbd.org/</a></td></tr>
-                 <tr><td class="infoTableHeader">$T('source') </td><td class="infoTableCell"><a href="https://github.com/sabnzbd/sabnzbd" target="_blank">https://github.com/sabnzbd/sabnzbd</a></td></tr>
-                 <tr class="alt"><td class="infoTableHeader">$T('menu-irc') </td><td class="infoTableCell"><a href="irc://irc.synirc.net/#sabnzbd"><i>#sabnzbd</i> on <i>irc.synirc.net</i></a> $T('or') (<a href="http://sabnzbd.org/live-chat/" target="_blank">webchat</a>)</td></tr>
-             </tbody>
-         </table>
-     </div>
+    <div class="section padTable">
+        <table id="infoTable">
+            <tbody>
+                <tr class="alt">
+                    <td class="infoTableHeader">$T('version'): </td>
+                    <td class="infoTableCell">$version [$build]</td>
+                </tr>
+                <tr>
+                    <td class="infoTableHeader">$T('uptime'): </td>
+                    <td class="infoTableCell">$uptime</td>
+                </tr>
+                <tr class="alt">
+                    <td class="infoTableHeader">$T('confgFile'): </td>
+                    <td class="infoTableCell">$configfn</td>
+                </tr>
+                <tr>
+                    <td class="infoTableHeader">$T('cache').capitalize(): </td>
+                    <td class="infoTableCell"><!--#set $msg=$T('ft-buffer@2')%($cache_art, $cache_size)#-->$msg</td>
+                </tr>
+                <tr class="alt">
+                    <td class="infoTableHeader">$T('parameters'): </td>
+                    <td class="infoTableCell">$cmdline</td>
+                </tr>
+                <tr>
+                    <td class="infoTableHeader">$T('pythonVersion'): </td>
+                    <td class="infoTableCell">$sys.version[:120]</td>
+                </tr>
+                <tr class="infoTableSeperator alt">
+                    <td class="infoTableHeader">$T('homePage') </td>
+                    <td class="infoTableCell"><a href="http://sabnzbd.org/" target="_blank">http://sabnzbd.org/</a></td>
+                </tr>
+                <tr>
+                    <td class="infoTableHeader">$T('menu-wiki') </td>
+                    <td class="infoTableCell"><a href="http://wiki.sabnzbd.org/faq" target="_blank">http://wiki.sabnzbd.org/faq</a></td>
+                </tr>
+                <tr class="alt">
+                    <td class="infoTableHeader">$T('menu-forums') </td>
+                    <td class="infoTableCell"><a href="http://forums.sabnzbd.org/" target="_blank">http://forums.sabnzbd.org/</a></td>
+                </tr>
+                <tr>
+                    <td class="infoTableHeader">$T('source') </td>
+                    <td class="infoTableCell"><a href="https://github.com/sabnzbd/sabnzbd" target="_blank">https://github.com/sabnzbd/sabnzbd</a></td>
+                </tr>
+                <tr class="alt">
+                    <td class="infoTableHeader">$T('menu-irc') </td>
+                    <td class="infoTableCell"><a href="irc://irc.synirc.net/#sabnzbd"><i>#sabnzbd</i> on <i>irc.synirc.net</i></a> $T('or') (<a href="http://sabnzbd.org/live-chat/" target="_blank">webchat</a>)</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <div class="padding alt">
         <h5 class="copyright">Copyright &copy; 2008-2015 The SABnzbd Team &lt;<a href="mailto:team@sabnzbd.org">team@sabnzbd.org</a>&gt;</h5>
         <p class="copyright"><small>$T('yourRights')</small></p>
     </div>
 </div>
-
 <!--#include $webdir + "/_inc_footer_uc.tmpl"#-->
